# szutl

./: .gitignore  CMakeLists.txt  README.md
include/: szutl_binary_data_loader.h
source/: szutl_binary_data_loader.cpp
